On apporte les visualisations de la NavBar ! Donc en pratique il y a deux fichiers markdown qui contiennent des iframes pointant vers des webapp DSS qui sont sur algo.previsecours.fr et le github pages permet simplement de faire des annotations autour, en y incluant titre et legendes, regroupe en un seul et meme endroit

--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -18,7 +18,7 @@
             <i class="fa fa-flask" aria-hidden="true"></i>
           </span> les algos
         </a>
-        <a href="https://viz.previsecours.fr" class="navbar-item has-text-primary">
+        <a href="viz" class="navbar-item has-text-primary">
           <span class="icon">
             <i class="fa fa-bar-chart" aria-hidden="true"></i>
           </span> les viz
