--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -2,7 +2,7 @@
   <div class="container">
     <div class="navbar-brand">
       <a href="{{ "/" | prepend: site.baseurl }}" class="logo">
-          <img src="/assets/images/eig.png" alt="matchID Logo">
+          <img src="/assets/images/previsecours.svg">
       </a>
       <div class="navbar-burger burger" data-target="navMenubd-main">
         <span></span>
