--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -1,8 +1,8 @@
 <nav class="navbar is-fixed-top is-transparent">
   <div class="container">
     <div class="navbar-brand">
-      <a href="{{ "/" | prepend: site.baseurl }}" class="logo">
-          <img src="/assets/images/previsecours.svg">
+      <a href="{{ "/" | prepend: site.baseurl }}" class="logo" style="padding-top:0.6em;padding-bottom:0.6em">
+          <img src="/assets/images/previsecours.svg" style="width:2.5em">
       </a>
       <div class="navbar-burger burger" data-target="navMenubd-main">
         <span></span>
