grosses modif pour etre présentables aux yeux du grand public

--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -16,12 +16,12 @@
         <a href="https://algo.previsecours.fr" class="navbar-item has-text-primary">
           <span class="icon">
             <i class="fa fa-flask" aria-hidden="true"></i>
-          </span> les algos
+          </span> algos
         </a>
         <a href="viz" class="navbar-item has-text-primary">
           <span class="icon">
             <i class="fa fa-bar-chart" aria-hidden="true"></i>
-          </span> les viz
+          </span> viz
         </a>
         <a href="/previsecours-slides/" class="navbar-item">
           <span class="icon">
