--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -18,10 +18,15 @@
             <i class="fa fa-flask" aria-hidden="true"></i>
           </span> algos
         </a>
+        <a href="https://viz.previsecours.fr" class="navbar-item has-text-primary">
+          <span class="icon">
+            <i class="fa fa-globe" aria-hidden="true"></i>
+          </span> map
+        </a>
         <a href="viz" class="navbar-item has-text-primary">
           <span class="icon">
             <i class="fa fa-bar-chart" aria-hidden="true"></i>
-          </span> viz
+          </span> infographie
         </a>
         <a href="/previsecours-slides/" class="navbar-item">
           <span class="icon">
