on rajoute les mentions légales sous demande de Daniel

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -66,6 +66,9 @@
         <a href="about">About the project</a>
       </p>
       <p>
+        <a href="./assets/pdf/mentionslegales.pdf">legal disclaimer / mentions légales</a>
+      </p>
+      <p>
         <a class="icon" href="https://github.com/{{ site.project.general.repo }}">
           <i class="fa fa-github"></i>
         </a>
