--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -33,6 +33,11 @@
               <h2 class="subtitle">
                 {{ page.description }}
               </h2>
+              <p>
+                  {% if page.video %}
+                    <iframe width="420" height="315" src="{{ page.video }}" frameborder="0" allowfullscreen></iframe>
+                  {% endif %}
+              </p>
             </div>
           </div>
         </section>
