--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -35,7 +35,7 @@
               </h2>
               <p>
                   {% if page.video %}
-                    <iframe width="420" height="315" src="{{ page.video }}" frameborder="0" allowfullscreen></iframe>
+                    <iframe class="responsive-iframe" width="420" height="315" src="{{ page.video }}" frameborder="0" allowfullscreen></iframe>
                   {% endif %}
               </p>
             </div>
