--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -150,3 +150,14 @@ a.logo {
     margin-top: 3rem;
     margin-bottom: 6rem;
 }
+
+.responsive-iframe {
+  width: 720px; 
+  height: 400px; 
+}
+
+@media (max-width: 767px) {
+    .responsive-iframe {
+      width: 100%; 
+    }
+}
